Fixed spacing and heading on organization page

--- a/src/components/organization-section/organization-view/OrganizationView.scss
+++ b/src/components/organization-section/organization-view/OrganizationView.scss
@@ -7,6 +7,10 @@
     line-height: 1.3;
 }
 
+.organization-modal .body {
+    margin-top: 10px;
+}
+
 .header-image img {
     width: 100%;
     height: 200px;
